[project]
name = "automatedmodeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "graphviz>=0.20.3",
    "jupyter>=1.1.1",
    "optbinning>=0.20.1",
    "scikit-learn>=1.6.1",
    "sklearn2pmml>=0.116.2",
    "toad>=0.1.5",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "xgboost>=3.0.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
